Fix spacing and sizing on phase banner

--- a/src/nationalarchives/components/phase-banner/_index.scss
+++ b/src/nationalarchives/components/phase-banner/_index.scss
@@ -2,8 +2,8 @@
 @use "../../tools/typography";
 
 .tna-phase-banner {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
 
   .tna-container {
     align-items: center;
@@ -16,12 +16,13 @@
 
   &__phase {
     margin: 0.25rem 0;
-    padding: 0.125rem 0.5rem;
+    padding: 0 0.5rem;
 
     display: block;
 
     font-weight: 700;
     text-transform: uppercase;
+    line-height: 1.5;
 
     background-color: #fff;
   }
